[project]
name = "gpt-image-generator"
version = "0.1.0"
description = "MCP server for GPT Image generation and editing workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pillow>=12.2.0",
]

[project.scripts]
gpt-image-mcp = "gpt_image_mcp.server:main"
