[project]
name = "image-generator-mcp"
version = "0.1.0"
description = "MCP server for OpenAI, Gemini, and xAI image generation workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pillow>=12.2.0",
]

[project.scripts]
image-generator-mcp = "image_generator_mcp.server:main"

[tool.setuptools.packages.find]
include = ["image_generator_mcp*"]

[tool.uv]
package = true
